[tool.poetry]
name = "minio-test"
version = "0.1.0"
description = ""
authors = ["Nadezhda <nadezhda.lavrentieva@avroid.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
minio = "^7.2.13"
unicorn = "^2.1.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
